@@ -16,7 +16,7 @@
 # Street, Fifth Floor, Boston, MA 02110-1301, USA.
 
 
-from gaupol.base.util import encodinglib
+from gaupol.base.util import enclib
 from gaupol.test      import Test
 
 
@@ -24,57 +24,57 @@ class TestModule(Test):
 
     def test_get_display_name(self):
 
-        name = encodinglib.get_display_name('johab')
+        name = enclib.get_display_name('johab')
         assert name == 'Johab'
 
         try:
-            encodinglib.get_display_name('xxxxx')
+            enclib.get_display_name('xxxxx')
             raise AssertionError
         except ValueError:
             pass
 
     def test_get_locale_encoding(self):
 
-        entry = encodinglib.get_locale_encoding()
+        entry = enclib.get_locale_encoding()
         assert len(entry) == 3
-        assert encodinglib.is_valid(entry[0])
+        assert enclib.is_valid(entry[0])
 
     def test_get_locale_long_name(self):
 
-        name = encodinglib.get_locale_long_name()
+        name = enclib.get_locale_long_name()
         assert isinstance(name, basestring)
 
     def test_get_long_name(self):
 
-        name = encodinglib.get_long_name('johab')
+        name = enclib.get_long_name('johab')
         assert isinstance(name, basestring)
 
         try:
-            encodinglib.get_long_name('xxxxx')
+            enclib.get_long_name('xxxxx')
             raise AssertionError
         except ValueError:
             pass
 
     def test_get_python_name(self):
 
-        name = encodinglib.get_python_name('Johab')
+        name = enclib.get_python_name('Johab')
         assert name == 'johab'
 
         try:
-            encodinglib.get_python_name('xxxxx')
+            enclib.get_python_name('xxxxx')
             raise AssertionError
         except ValueError:
             pass
 
     def test_get_valid_encodings(self):
 
-        entries = encodinglib.get_valid_encodings()
+        entries = enclib.get_valid_encodings()
         assert len(entries) > 10
         for entry in entries:
             assert len(entry) == 3
-            assert encodinglib.is_valid(entry[0])
+            assert enclib.is_valid(entry[0])
 
     def test_is_valid(self):
 
-        assert encodinglib.is_valid('johab') is True
-        assert encodinglib.is_valid('xxxxx') is False
+        assert enclib.is_valid('johab') is True
+        assert enclib.is_valid('xxxxx') is False
